# DermaDoc-A-Multi-Agent-Dermatologist-CSE327-Team-2-

./: CHANGES_SUMMARY.md  CODE_QUALITY_IMPROVEMENTS.md  README.md  SECURITY_AUDIT.md
backend/: .env.example  .gitignore  README.md  main.py  pyproject.toml  uv.lock.example
backend/app/: __init__.py
backend/app/core/: config.py  database.py  prompts.py  security.py  storage.py
backend/app/models/: chat.py  skin_check.py  user.py
backend/app/routers/: auth.py  chat.py  chat_sync.py  skin_check.py
backend/app/services/: background_tasks.py  classifier.py
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.jsx  index.css
frontend/src/components/: Chatbot.jsx  Footer.jsx  Header.jsx  Hero.jsx  HowItWorks.jsx  KeyFeatures.jsx  MarkdownMessage.jsx  Navbar.jsx  ProtectedRoute.jsx  ResultDetailsDialog.jsx
frontend/src/components/ui/: alert-dialog.jsx  dialog.jsx  label.jsx  scroll-area.jsx  select.jsx  sonner.jsx
frontend/src/contexts/: AuthContext.jsx  ChatbotContext.jsx
frontend/src/hooks/: useAuthMutation.js  useCurrentUser.js
frontend/src/lib/: api.js
frontend/src/pages/: Dashboard.jsx  Home.jsx  Login.jsx  Profile.jsx  Results.jsx  Signup.jsx  SkinCheck.jsx
